Fixing width issue on mobile, test.

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -252,6 +252,10 @@ body{
     }
 
 
+    #wrapper{
+        width: 88%;
+    }
+
     #content_container{
         margin: 1% auto;
         width: 100%;
